@@ -1,3 +1,7 @@
+Thu Oct  4 22:49:56 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Thu Oct  4 22:46:55 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
